[package]
name = "httprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "3", features = ["derive"] }
colored = "2.1.0"
jsonxf = "1.1.1"
mime = "0.3.17"
# reqwest 默认使用 openssl，有些 linux 用户如果没有安装好 openssl 会无法编译，这里改成了使用 rustls
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
syntect = "5.2.0"
tokio = { version = "1.38.0", features = ["full"] }
